# Linux-NetX

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  gunicorn.conf.py  llms.txt  mkdocs.yml  pyproject.toml  repomix.config.json  worker.py
.github/workflows/: docs.yml  ruff.yml  test-containerlab.yml
config/: config.yaml  log-config.yaml
deploy/: README.md
deploy/charts/linux-net/: Chart.yaml  values.yaml
deploy/charts/linux-net/templates/: NOTES.txt  _helpers.tpl  config.yaml  controller.yaml  ingress.yaml  redis.yaml  storage.yaml  vault-init.yaml  vault.yaml  workers.yaml
deploy/k8s/: 00-secrets.yaml  01-linux-net-storage.yaml  01-redis-operator.yaml  01-redis.yaml  02-linux-net.yaml  02-redis-operator.yaml  03-ingress.yaml  03-redis-cluster.yaml  04-nodeport.yaml  04-vault.yaml  05-vault-init.yaml  05-vault.yaml  06-linux-net-core.yaml  07-ingress.yaml  08-nodeport.yaml  09-mongodb.yaml  README.md
deploy/k8s/scripts/: distribute_images.sh  k8s_setup_secrets.sh
docker/: controller.dockerfile
docs/en/architecture/: worker-pool-observability.md
docs/stylesheets/: extra.css
linux_net/: __init__.py  controller.py
linux_net/cli/: main.py
linux_net/models/: common.py  driver.py  request.py  response.py
linux_net/plugins/credentials/vault_kv/: __init__.py
linux_net/plugins/drivers/netmiko/: __init__.py  model.py
linux_net/plugins/drivers/paramiko/: __init__.py
linux_net/plugins/webhooks/basic/: __init__.py
linux_net/routes/: manage.py
linux_net/services/: audit.py  manager.py  observability.py  rediz.py  rpc.py  supervisor.py
linux_net/static/: dashboard.html
linux_net/utils/: config.py  exceptions.py  logger.py
linux_net/worker/: archiver.py  node.py
linux_net_agent/: CMakeLists.txt  README.md
linux_net_agent/include/linux_net_agent/: agent.hpp
linux_net_agent/src/: main.cpp
linux_net_agent/systemd/: linux-net-agent.service
postman/: Linux-Net.postman_collection.json
scripts/: docker_auto_deploy.sh  export_openapi.py  k8s_setup_secrets.sh  setup_env.sh  validate_k8s_manifests.py  vault_auto_init.sh
tests/: README.md  verify_new_detach.py
tests/clab/: README.md  e2e.clab.yaml
tests/data/: config.e2e.yaml  config.test.yaml
tests/e2e/: conftest.py  settings.py  test_api.py  test_driver_netmiko.py  test_driver_paramiko.py
tests/unit/: conftest.py  test_api_integration.py  test_audit.py  test_credentials.py  test_driver_netmiko.py  test_driver_paramiko.py  test_driver_paramiko_advanced.py  test_driver_paramiko_detach.py  test_driver_paramiko_detached_advanced.py  test_driver_paramiko_jinja2.py  test_driver_paramiko_proxy.py  test_infra.py  test_logger.py  test_manager.py  test_models.py  test_observability.py  test_plugin_loader.py  test_routes.py  test_routes_storage.py  test_rpc.py  test_schedulers.py  test_security.py  test_template.py  test_webhooks.py  test_worker.py
tools/webhook/: README.md  webhook_server.py
