[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Linux-Net"
version = "0.4.3"
description = "API Server for Network Devices"
authors = [
    { name = "Alok Priyadarshi", email = "alokpriyadarshi618@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["network", "api", "netmiko", "napalm", "automation", "fastapi"]

dependencies = [
    # Core
    "colorlog~=6.9.0",
    "filelock~=3.17.0",
    "pydantic~=2.10.6",
    "pydantic-settings[yaml]~=2.9.1",
    "requests~=2.32.3",
    "hvac~=2.3.0",

    # Redis & MongoDB
    "redis~=5.2.1",
    "rq~=2.3.1",
    "pymongo~=4.11.1",

    # Drivers
    "napalm~=5.1.0",
    "ncclient~=0.6.15",
    "netmiko~=4.6.0",
    "paramiko~=4.0.0",
    "puresnmp~=2.0.1",
    "pyeapi~=1.0.4",

    # Templates
    "Jinja2~=3.1.5",
    "jinja2schema~=0.1.4",
    "textfsm~=1.1.3",
    "ntc_templates~=7.7.0",
    "ttp~=0.10.0",
    "ttp-templates~=0.3.7",
]

[project.optional-dependencies]
api = [
    "fastapi~=0.115.12",
    "gunicorn~=23.0.0",
    "uvicorn~=0.34.0",
    "uvloop~=0.21.0; sys_platform != 'win32'",
    "python-multipart~=0.0.12",
]
tool = ["pandas~=2.2", "openpyxl~=3.1", "rich~=13.0"]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "bandit[toml]>=1.8.0",
    "mkdocs-material~=9.6.0",
    "mkdocs-static-i18n~=1.3.0",
    "pytest~=8.3.0",
    "pytest-cov~=6.0.0",
    "fakeredis~=2.23.3",
    "httpx~=0.27.0",
]
test = ["pytest~=8.3.0", "pytest-cov~=6.0.0", "fakeredis~=2.23.3", "httpx~=0.27.0"]

[project.scripts]
linux-net-cli = "linux_net.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/alokpriyadarshii/Linux-Net"
"Documentation" = "https://linux-net.readthedocs.io"
"Repository" = "https://github.com/alokpriyadarshii/Linux-Net"
"Bug Tracker" = "https://github.com/alokpriyadarshii/Linux-Net/issues"
"Changelog" = "https://github.com/alokpriyadarshii/Linux-Net/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["linux_net*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "__pycache__",
    "*.py[co]",
    "*.lock",
    "*.dockerfile",
    "*.sh",
    "*.postman_collection.json",
    "*.log",
    "*.bak",
]

[tool.ruff]
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "W", "RUF", "I"]

[tool.mypy]
python_version = "3.12"
files = [
    "linux_net/controller.py",
    "linux_net/routes/manage.py",
    "linux_net/services/observability.py",
]
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "linux_net_agent/build"]
skips = ["B101", "B404", "B603", "B607"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end tests that require ContainerLab devices",
    "api: API-level tests without external deps",
]
filterwarnings = [
    "ignore::pyparsing.PyparsingDeprecationWarning:jnpr.junos.*",
    "ignore::DeprecationWarning:jnpr.junos.*",
]
